welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:7: error: unclosed character literal
    	println 'ROH'
                    ^arrayFront9:7: error: ';' expected but symbol literal found.
    	println 'ROH'
                ^